# ZirconEngine

./: .gitignore  Cargo.toml
zircon_app/: Cargo.toml  build.rs
zircon_app/src/: lib.rs  prelude.rs  runtime_presenter.rs
zircon_asset/: Cargo.toml
zircon_asset/src/: lib.rs  uri.rs  watch.rs
zircon_core/: Cargo.toml
zircon_core/src/: channel_util.rs  config_store.rs  error.rs  event_bus.rs  lib.rs
zircon_editor/: Cargo.toml  build.rs
zircon_editor/src/: lib.rs
zircon_editor/tests/: asset_window_template.rs  integration_contracts.rs  native_window_hosts.rs  structure_roots.rs  viewport_toolbar_template_projection.rs  workbench_animation_editor_shell.rs  workbench_autolayout.rs  workbench_drag_targets.rs  workbench_slint_shell.rs  workbench_slint_ui_asset_authoring_shell.rs  workbench_slint_ui_asset_theme_shell.rs  workbench_window_resize.rs  workbench_window_template.rs
zircon_editor/ui/: workbench.slint
zircon_editor_ui/: Cargo.toml
zircon_editor_ui/src/: binding.rs  control.rs  lib.rs  ui_asset_editor.rs
zircon_entry/: Cargo.toml
zircon_entry/src/: lib.rs  runtime_presenter.rs
zircon_foundation/: Cargo.toml
zircon_foundation/src/: lib.rs  module.rs  tests.rs
zircon_framework/: Cargo.toml
zircon_framework/src/: asset.rs  foundation.rs  lib.rs  script.rs  tests.rs  ui.rs
zircon_graphics/: Cargo.toml
zircon_graphics/src/: lib.rs  render_backend.rs  scene_renderer.rs  service.rs  types.rs  viewport.rs
zircon_hub/: Cargo.toml  build.rs  hub.toml
zircon_hub/src/: error.rs  lib.rs  main.rs
zircon_hub/tests/: hub_docs_contract.rs  project_management_contract.rs  project_page_copy_contract.rs  project_path_scope_contract.rs  project_quick_actions_contract.rs  project_source_engine_contract.rs  project_workflow_contract.rs  ui_contract.rs  ui_data_container_primitives_contract.rs  ui_data_display_contract.rs  ui_foundation_contract.rs  ui_global_rules_contract.rs  ui_input_navigation_api_contract.rs  ui_input_primitives_contract.rs  ui_inputs_contract.rs  ui_material_usage_contract.rs  ui_navigation_contract.rs  ui_overlay_primitives_contract.rs  ui_page_surface_coverage_contract.rs  ui_panel_slot_contract.rs  ui_project_browser_table_contract.rs  ui_project_layout_contract.rs  ui_project_navigation_contract.rs  ui_project_scope_contract.rs  ui_selected_project_catalog_contract.rs  ui_selected_project_runtime_contract.rs  ui_shell_composition_contract.rs  ui_shell_contract.rs  ui_shell_header_contract.rs  ui_shell_navigation_contract.rs  ui_shell_window_contract.rs  ui_taffy_layout_contract.rs  ui_typography_contract.rs  ui_visual_standard_contract.rs  ui_workspace_layout_contract.rs
zircon_hub/ui/: app.slint  assets.slint  builds.slint  builds_page_components.slint  button_components.slint  catalog_page_components.slint  cloud.slint  cloud_page_components.slint  components.slint  data_display.slint  editor.slint  editor_page_components.slint  inputs.slint  layout.slint  learn.slint  material_bridge.slint  navigation.slint  operation_timeline_components.slint  overlays.slint  placeholder.slint  plugins.slint  project_browser_components.slint  project_browser_page.slint  project_dashboard.slint  project_dashboard_components.slint  project_detail_components.slint  project_detail_page.slint  project_new_page.slint  project_page_components.slint  project_pages.slint  projects.slint  settings.slint  settings_page_components.slint  shared.slint  shell.slint  shell_header_components.slint  shell_header_popup_components.slint  shell_page_components.slint  shell_sidebar_components.slint  surfaces.slint  (+5 more)
zircon_input/: Cargo.toml
zircon_input/src/: lib.rs
zircon_manager/: Cargo.toml
zircon_manager/src/: builtins.rs  handles.rs  lib.rs  records.rs  resolver.rs  service_names.rs  tests.rs  traits.rs
zircon_plugins/: Cargo.toml  README.md
zircon_plugins/animation/: plugin.toml
zircon_plugins/animation_graph/: README.md  plugin.toml
zircon_plugins/audio_importer/: plugin.toml
zircon_plugins/editor_build_export_desktop/: plugin.toml
zircon_plugins/editor_support/: Cargo.toml
zircon_plugins/gltf_importer/: plugin.toml
zircon_plugins/hybrid_gi/: plugin.toml
zircon_plugins/material_editor/: README.md  plugin.toml
zircon_plugins/native_dynamic_fixture/: plugin.toml
zircon_plugins/native_dynamic_sample/: plugin.toml
zircon_plugins/native_window_hosting/: plugin.toml
zircon_plugins/navigation/: plugin.toml
zircon_plugins/net/: plugin.toml
zircon_plugins/obj_importer/: plugin.toml
zircon_plugins/particles/: plugin.toml
zircon_plugins/physics/: plugin.toml
zircon_plugins/plugin_sdk_examples/: plugin.toml
zircon_plugins/prefab_tools/: README.md  plugin.toml
zircon_plugins/rendering/: plugin.toml
zircon_plugins/runtime_diagnostics/: plugin.toml
zircon_plugins/shader_wgsl_importer/: plugin.toml
zircon_plugins/solari/: plugin.toml
zircon_plugins/sound/: plugin.toml
zircon_plugins/terrain/: README.md  plugin.toml
zircon_plugins/texture/: plugin.toml
zircon_plugins/texture_importer/: plugin.toml
zircon_plugins/tilemap_2d/: README.md  plugin.toml
zircon_plugins/timeline_sequence/: README.md  plugin.toml
zircon_plugins/ui_asset_authoring/: plugin.toml
zircon_plugins/ui_document_importer/: plugin.toml
zircon_plugins/virtual_geometry/: plugin.toml
zircon_plugins/zr_vm_language/: plugin.toml
zircon_render_server/: Cargo.toml
zircon_render_server/src/: error.rs  handle.rs  lib.rs  server.rs  tests.rs  types.rs
zircon_resource/: Cargo.toml
zircon_resource/src/: handle.rs  id.rs  identity.rs  io.rs  lease.rs  lib.rs  locator.rs  manager.rs  marker.rs  record.rs  registry.rs  runtime.rs  tests.rs
zircon_runtime/: Cargo.toml  build.rs
zircon_runtime/reflection_macros/: Cargo.toml
zircon_runtime/src/: asset.rs  builtin.rs  foundation.rs  graphics.rs  input.rs  lib.rs  platform.rs  prelude.rs  scene.rs  (+3 more)
zircon_runtime_interface/: Cargo.toml
zircon_scene/: Cargo.toml
zircon_script/: Cargo.toml
zircon_ui/: Cargo.toml
ziron_asset/: Cargo.toml
ziron_core/: Cargo.toml
ziron_graphics/: Cargo.toml
(+9734 files in other folders)
