[workspace]
members = [
    "zircon_core",
    "zircon_math",
    "zircon_resource",
    "zircon_rhi",
    "zircon_rhi_wgpu",
    "zircon_render_graph",
    "zircon_render_server",
    "zircon_graphics",
    "zircon_physics",
    "zircon_sound",
    "zircon_texture",
    "zircon_ui",
    "zircon_asset",
    "zircon_scene",
    "zircon_platform",
    "zircon_editor",
    "zircon_editor_ui",
    "zircon_manager",
    "zircon_module",
    "zircon_entry",
    "zircon_script",
    "zircon_animation",
    "zircon_net",
    "zircon_input",
    "zircon_navigation",
    "zircon_particles",
]
resolver = "2"
default-members = ["zircon_core", "zircon_math"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# 仅多 crate 共用的版本；其余依赖写在各 zircon_* 的 Cargo.toml 中。
[workspace.dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
glam = { version = "0.32.1", features = ["serde"] }
gltf = "1.4.1"
image = "0.25.10"
naga = { version = "27.0.3", features = ["wgsl-in"] }
notify = "6.1.1"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.15", default-features = false, features = ["std", "backend-winit", "renderer-skia", "unstable-wgpu-27", "unstable-winit-030", "compat-1-2"] }
slint-build = "1.15"
tobj = "4.0.3"
thiserror = "2.0.18"
toml = "0.9.8"
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
wgpu = "27.0.1"
winit = "0.30.13"
