[workspace]
members = [
    "zircon_app",
    "zircon_runtime",
    "zircon_editor",
]
resolver = "2"
default-members = ["zircon_runtime"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# 仅多 crate 共用的版本；其余依赖写在各 zircon_* 的 Cargo.toml 中。
[workspace.dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
glam = { version = "0.32.1", features = ["serde"] }
gltf = "1.4.1"
image = "0.25.10"
naga = { version = "29.0.1", features = ["wgsl-in"] }
notify = "9.0.0-rc.3"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.16.0", default-features = false, features = ["std", "backend-winit", "renderer-skia", "unstable-wgpu-27", "unstable-winit-030", "compat-1-2"] }
slint-build = "1.16.0"
tobj = "4.0.3"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
wgpu = "29.0.1"
winit = "0.31.0-beta.2"
