[package]
name = "zircon_app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine entry bootstrap, shell startup, and profile selection."
autobins = false

[[bin]]
name = "zircon_editor"
path = "src/bin/editor.rs"

[[bin]]
name = "zircon_runtime"
path = "src/bin/runtime_preview.rs"

[dependencies]
serde_json = "1.0.149"
softbuffer = "0.4.6"
winit.workspace = true
zircon_editor = { path = "../zircon_editor" }
zircon_runtime = { path = "../zircon_runtime" }
