[package]
name = "zircon_asset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asset paths, loading, and resource registry (Godot ResourceLoader-adjacent)."

[dependencies]
crossbeam-channel.workspace = true
image.workspace = true
ron = "0.12.1"
serde.workspace = true
serde_json = "1.0.149"
zircon_core = { path = "../zircon_core" }
zircon_math = { path = "../zircon_math" }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
zstd = "0.13.3"
