[package]
name = "zircon_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, ECS hooks, and engine lifecycle (Godot core/scene-adjacent; Fyrox fyrox-core-adjacent)."

[dependencies]
crossbeam-channel.workspace = true
crossbeam-utils = "0.8.21"
rayon = "1.11.0"
thiserror.workspace = true
tracing.workspace = true
