[package]
name = "zircon_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Editor shell, tools, and Slint-based workbench UI (Godot editor/ parallel)."
build = "build.rs"

[dependencies]
crossbeam-channel.workspace = true
gltf.workspace = true
image.workspace = true
serde.workspace = true
serde_json = "1.0.149"
slint.workspace = true
thiserror.workspace = true
toml.workspace = true
zircon_runtime = { path = "../zircon_runtime" }

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
crossbeam-channel.workspace = true
i-slint-backend-testing = "1.15.1"
