[package]
name = "zircon_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Editor shell, tools, and Rust-owned workbench UI host contracts."
build = "build.rs"

[dependencies]
crossbeam-channel.workspace = true
gltf.workspace = true
image.workspace = true
notify.workspace = true
serde.workspace = true
serde_json = "1.0.149"
slint.workspace = true
thiserror.workspace = true
toml.workspace = true
zircon_runtime = { path = "../zircon_runtime" }
zircon_runtime_interface = { path = "../zircon_runtime_interface" }

[dev-dependencies]
crossbeam-channel.workspace = true
i-slint-backend-testing = "1.15.1"

[features]
default = []
integration-contracts = []

[[test]]
name = "integration_contracts"
path = "tests/integration_contracts.rs"
required-features = ["integration-contracts"]
