[package]
name = "zircon_editor_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Editor-only UI bindings, host events, and headless workbench interaction contracts."

[dependencies]
crossbeam-channel.workspace = true
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
zircon_scene = { path = "../zircon_scene" }
zircon_ui = { path = "../zircon_ui" }
