[package]
name = "zircon_entry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine entry bootstrap, shell startup, and profile selection."
autobins = false

[[bin]]
name = "zircon_editor"
path = "src/bin/editor.rs"

[[bin]]
name = "zircon_runtime"
path = "src/bin/runtime_preview.rs"

[dependencies]
serde_json = "1.0.149"
softbuffer = "0.4.6"
winit.workspace = true
zircon_asset = { path = "../zircon_asset" }
zircon_animation = { path = "../zircon_animation" }
zircon_core = { path = "../zircon_core" }
zircon_editor = { path = "../zircon_editor" }
zircon_foundation = { path = "../zircon_foundation" }
zircon_graphics = { path = "../zircon_graphics" }
zircon_input = { path = "../zircon_input" }
zircon_math = { path = "../zircon_math" }
zircon_module = { path = "../zircon_module" }
zircon_navigation = { path = "../zircon_navigation" }
zircon_net = { path = "../zircon_net" }
zircon_particles = { path = "../zircon_particles" }
zircon_physics = { path = "../zircon_physics" }
zircon_platform = { path = "../zircon_platform" }
zircon_render_server = { path = "../zircon_render_server" }
zircon_scene = { path = "../zircon_scene" }
zircon_script = { path = "../zircon_script" }
zircon_manager = { path = "../zircon_manager" }
zircon_sound = { path = "../zircon_sound" }
zircon_texture = { path = "../zircon_texture" }
zircon_ui = { path = "../zircon_ui" }
