[package]
name = "zircon_entry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine entry bootstrap, shell startup, and profile selection."
autobins = false

[[bin]]
name = "zircon_editor"
path = "src/bin/editor.rs"

[[bin]]
name = "zircon_runtime"
path = "src/bin/runtime_preview.rs"

[dependencies]
serde_json = "1.0.149"
softbuffer = "0.4.6"
winit.workspace = true
zircon_builtin_modules = { path = "../zircon_builtin_modules" }
zircon_core = { path = "../zircon_core" }
zircon_editor = { path = "../zircon_editor" }
zircon_input = { path = "../zircon_input" }
zircon_manager = { path = "../zircon_manager" }
zircon_math = { path = "../zircon_math" }
zircon_module = { path = "../zircon_module" }
zircon_render_server = { path = "../zircon_render_server" }
zircon_scene = { path = "../zircon_scene" }

[dev-dependencies]
zircon_asset = { path = "../zircon_asset" }
zircon_graphics = { path = "../zircon_graphics" }
