[package]
name = "zircon_framework"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared framework contracts, protocol DTOs, and render interfaces."

[dependencies]
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
zircon_core = { path = "../zircon_core" }
zircon_math = { path = "../zircon_math" }
zircon_resource = { path = "../zircon_resource" }
