[package]
name = "zircon_hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone desktop launcher and install hub for ZirconEngine."
build = "build.rs"
autobins = false

[[bin]]
name = "zircon_hub"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json = "1.0.149"
slint = "1"
thiserror.workspace = true
toml.workspace = true

[build-dependencies]
slint-build = "1"
