[package]
name = "zircon_input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Action maps, devices, and high-level input routing above raw platform events."

[dependencies]
winit.workspace = true
zircon_core = { path = "../zircon_core" }
zircon_module = { path = "../zircon_module" }
zircon_manager = { path = "../zircon_manager" }
