[package]
name = "zircon_manager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine manager facades, handles, and resolver contracts."

[dependencies]
serde.workspace = true
serde_json = "1.0.149"
zircon_core = { path = "../zircon_core" }
zircon_framework = { path = "../zircon_framework" }
zircon_resource = { path = "../zircon_resource" }
