[workspace]
members = [
    "editor_support",
    "gltf_importer/runtime",
    "obj_importer/runtime",
    "texture_importer/runtime",
    "audio_importer/runtime",
    "opus_importer/runtime",
    "shader_wgsl_importer/runtime",
    "ui_document_importer/runtime",
    "asset_importers/model/runtime",
    "asset_importers/texture/runtime",
    "asset_importers/audio/runtime",
    "asset_importers/shader/runtime",
    "asset_importers/data/runtime",
    "physics/runtime",
    "physics/editor",
    "sound/runtime",
    "sound/editor",
    "sound/features/timeline_animation_track/runtime",
    "sound/features/timeline_animation_track/editor",
    "sound/features/ray_traced_convolution_reverb/runtime",
    "sound/features/ray_traced_convolution_reverb/editor",
    "texture/runtime",
    "texture/editor",
    "net/runtime",
    "net/features/http/runtime",
    "net/features/replication/runtime",
    "net/features/reliable_udp/runtime",
    "net/features/rpc/runtime",
    "net/features/websocket/runtime",
    "net/features/content_download/runtime",
    "net/editor",
    "navigation/native",
    "navigation/runtime",
    "navigation/editor",
    "particles/runtime",
    "particles/editor",
    "animation/runtime",
    "animation/editor",
    "terrain/runtime",
    "terrain/editor",
    "tilemap_2d/runtime",
    "tilemap_2d/editor",
    "material_editor/editor",
    "prefab_tools/runtime",
    "prefab_tools/editor",
    "timeline_sequence/editor",
    "animation_graph/editor",
    "rendering/runtime",
    "rendering/editor",
    "rendering/features/post_process/runtime",
    "rendering/features/post_process/editor",
    "rendering/features/ssao/runtime",
    "rendering/features/ssao/editor",
    "rendering/features/decals/runtime",
    "rendering/features/decals/editor",
    "rendering/features/reflection_probes/runtime",
    "rendering/features/reflection_probes/editor",
    "rendering/features/baked_lighting/runtime",
    "rendering/features/baked_lighting/editor",
    "rendering/features/ray_tracing_policy/runtime",
    "rendering/features/ray_tracing_policy/editor",
    "rendering/features/shader_graph/runtime",
    "rendering/features/shader_graph/editor",
    "rendering/features/vfx_graph/runtime",
    "rendering/features/vfx_graph/editor",
    "virtual_geometry/runtime",
    "virtual_geometry/editor",
    "hybrid_gi/runtime",
    "hybrid_gi/editor",
    "runtime_diagnostics/editor",
    "ui_asset_authoring/editor",
    "native_window_hosting/editor",
    "editor_build_export_desktop/editor",
    "plugin_sdk_examples/editor",
    "native_dynamic_fixture/native",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
