[package]
name = "zircon_resource"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed resource locators, handles, registry, and lifecycle state."

[dependencies]
crossbeam-channel.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json = "1.0.149"
