[package]
name = "zircon_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime absorption layer for high-level engine subsystems."

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["target-client"]
runtime-ui-integration-tests = []
jolt = []
core-min = []
plugin-ui = []
target-client = [
    "core-min",
    "plugin-ui",
]
target-server = [
    "core-min",
]
target-editor-host = [
    "core-min",
    "plugin-ui",
]

[dependencies]
bincode.workspace = true
bytemuck.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils = "0.8.21"
glam.workspace = true
gltf.workspace = true
glyphon = "0.11.0"
fontsdf = "0.5.3"
image.workspace = true
naga.workspace = true
notify.workspace = true
pollster.workspace = true
raw-window-handle = "0.6.2"
rayon = "1.11.0"
ron = "0.12.1"
serde.workspace = true
serde_json = "1.0.149"
tobj.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
wgpu.workspace = true
winit.workspace = true
libloading = "0.9.0"
zstd = "0.13.3"
zircon_runtime_interface = { path = "../zircon_runtime_interface" }
