[package]
name = "zircon_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime absorption layer for high-level engine subsystems."

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["target-client"]
runtime-ui-integration-tests = []
jolt = []
core-min = []
plugin-ui = []
accessibility-accesskit = []
profiling = []
profiling-chrome = ["profiling"]
profiling-tracy = ["profiling", "dep:tracing-subscriber", "dep:tracing-tracy"]
profiling-memory = ["profiling"]
default-platform = [
    "platform-window",
    "platform-winit",
    "input-mouse",
    "input-keyboard",
    "input-touch",
    "input-gamepad",
]
platform-window = []
platform-winit = ["platform-window", "dep:winit"]
platform-headless = []
platform-x11 = ["platform-winit", "winit/x11"]
platform-wayland = ["platform-winit", "winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
platform-android-game-activity = ["platform-winit", "winit/android-game-activity"]
platform-android-native-activity = ["platform-winit", "winit/android-native-activity"]
platform-web = ["platform-window", "platform-winit"]
input-mouse = []
input-keyboard = []
input-touch = []
input-gestures = []
input-gamepad = []
gamepad-gilrs = ["input-gamepad"]
target-client = [
    "core-min",
    "plugin-ui",
    "default-platform",
]
target-server = [
    "core-min",
    "platform-headless",
]
target-editor-host = [
    "core-min",
    "plugin-ui",
    "default-platform",
]

[dependencies]
bincode.workspace = true
bytemuck.workspace = true
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
crossbeam-channel.workspace = true
crossbeam-utils = "0.8.21"
glam.workspace = true
gltf.workspace = true
glyphon = "0.11.0"
fontsdf = "0.5.3"
image.workspace = true
naga.workspace = true
notify.workspace = true
pollster.workspace = true
raw-window-handle = "0.6.2"
rayon = "1.11.0"
ron = "0.12.1"
serde.workspace = true
serde_json = "1.0.149"
taffy = { version = "0.10", default-features = false, features = ["std", "block_layout", "flexbox", "grid", "content_size", "taffy_tree"] }
tobj.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
unicode-segmentation = "1.13.2"
uuid.workspace = true
wgpu.workspace = true
winit = { workspace = true, default-features = false, optional = true }
libloading = "0.9.0"
zstd = "0.13.3"
zircon_runtime_interface = { path = "../zircon_runtime_interface" }
zircon_runtime_reflection_macros = { path = "reflection_macros" }
