[package]
name = "zircon_runtime_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable ABI and DTO contracts for loading the Zircon runtime as a dynamic library."

[dependencies]
glam.workspace = true
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
