[package]
name = "zircon_scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scene graph and nodes (Godot scene/ parallel)."

[dependencies]
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
zircon_asset = { path = "../zircon_asset" }
zircon_math = { path = "../zircon_math" }
