[package]
name = "zircon_scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scene graph and nodes (Godot scene/ parallel)."

[dependencies]
image.workspace = true
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
zircon_asset = { path = "../zircon_asset" }
zircon_core = { path = "../zircon_core" }
zircon_framework = { path = "../zircon_framework" }
zircon_math = { path = "../zircon_math" }
zircon_module = { path = "../zircon_module" }
zircon_resource = { path = "../zircon_resource" }
zircon_manager = { path = "../zircon_manager" }
