[package]
name = "zircon_script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scripting language bindings and runtime hooks (Godot scripting stack parallel)."

[dependencies]
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
zircon_core = { path = "../zircon_core" }
zircon_module = { path = "../zircon_module" }
