[package]
name = "zircon_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immediate and retained UI (Godot Control / Fyrox UI-adjacent)."

[dependencies]
crossbeam-channel.workspace = true
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
zircon_module = { path = "../zircon_module" }
