[package]
name = "ziron_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, ECS hooks, and engine lifecycle (Godot core/scene-adjacent; Fyrox fyrox-core-adjacent)."

[dependencies]
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
rayon = "1.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
