[package]
name = "ziron_graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rendering device and draw submission (Godot RenderingServer / Fyrox graphics-adjacent)."

[dependencies]
bytemuck = "1.25.0"
glam.workspace = true
raw-window-handle = "0.6.2"
wgpu = "27.0.1"
