[package]
name = "zircon_runtime_reflection_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for Zircon runtime script host reflection."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
