[package]
name = "zircon_plugin_animation_graph_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Animation graph editor plugin package for Zircon."

[dependencies]
zircon_editor = { path = "../../../zircon_editor" }
zircon_plugin_editor_support = { path = "../../editor_support" }
zircon_runtime = { path = "../../../zircon_runtime", default-features = false }
