[package]
name = "zircon_plugin_audio_importer_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio asset importer runtime plugin package for Zircon."

[dependencies]
symphonia = { version = "0.5.5", default-features = false, features = ["aiff", "flac", "mp3", "ogg", "pcm", "vorbis"] }
zircon_runtime = { path = "../../../zircon_runtime", default-features = false }
