[package]
name = "zircon_plugin_editor_build_export_desktop_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop build/export editor plugin package for Zircon."

[dependencies]
zircon_editor = { path = "../../../zircon_editor" }
zircon_plugin_editor_support = { path = "../../editor_support" }
zircon_runtime = { path = "../../../zircon_runtime", default-features = false }
